<resources>
    <string name="app_name">Inventory App V2</string>
    <string name="book_name">BOOK NAME</string>
    <string name="book_category">Category (e.g. tech, fiction, magzine etc.)</string>
    <string name="price_240">240</string>
    <string name="qty_10">10</string>
    <string name="category_typr">Category :</string>
    <string name="price_heading">Price : ₹</string>
    <string name="qty_heading">Qty :</string>
    <string name="supplier_name">Supplier Name :</string>
    <string name="supplier_no">Supplier No. :</string>
    <string name="supplier_email">Supplier Email :</string>
    <string name="email_sample">abc123@gmail.com</string>
    <string name="all_books">All Books</string>
    <string name="edit">Edit</string>
    <string name="details">Details</string>
    <string name="save">Save</string>
    <string name="edit_mode_notification">Edit Mode ON</string>
    <string name="delete_mode_notification">Deleted</string>
    <string name="save_mode_notification">Save</string>
    <string name="went_wrong_notification">Something Went Wrong</string>
    <string name="home_back">Back to Home</string>
    <string name="insert_dummy_data">Insert Dummy Data</string>
    <string name="delete_all_data">Delete All Data</string>
    <string name="dummy_data_notify">Dummy Data Inserted</string>
    <string name="insertion_failed">Insertion Failed</string>
    <string name="insertion_successfully">Inserted Successfully</string>
    <string name="category_main">Category</string>
    <string name="sale">SALE</string>
    <string name="its_empty_add_some_books">Its Empty, Add Some Books</string>
    <string name="add_book_title">Add Book</string>
    <string name="updation_failure_notify">Updation Failed</string>
    <string name="update_success_notify">Updation Successfull</string>
    <string name="delete_success_notify">Deleted Successfully</string>
    <string name="delete_failed_notify">Unable to Delete</string>
    <string name="confirm_delete_alert">Confirm Deletion ?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="rupees_symbol">₹</string>
    <string name="qty_head">Qty:</string>
    <string name="deletion_cnfrm_notify">No of Rows Deleted:</string>
    <string name="incomplete_form_notify">Some Field Left Blank, Data Not Saved</string>
    <string name="unsaved_alert_notify">Discard Your Changes and Quit Editing ?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>
    <string name="sale_failed">Sale Failed</string>
    <string name="sale_success">Sale Successful</string>
    <string name="out_of_stock">Out Of Stock</string>
    <string name="minus_button">-</string>
    <string name="plus_button">+</string>
</resources>
