<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/_10dp"
    android:padding="@dimen/_3dp"
    android:background="@drawable/custom_border">

    <TextView
        android:id="@+id/nameText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/_24sp"
        android:gravity="center"
        android:textStyle="bold"
        tools:text="@string/book_name"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_3dp"
        android:layout_below="@id/nameText"
        android:background="@color/colorPrimaryDark"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/nameText"
        android:layout_marginTop="@dimen/_5dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="@dimen/_0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/priceText"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="@dimen/_18sp"
                tools:text="@string/price_240"/>

            <TextView
                android:id="@+id/categoryText"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="@dimen/_15sp"
                tools:text="@string/category_main"/>

        </LinearLayout>

        <View
            android:layout_width="@dimen/_3dp"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary"/>

        <LinearLayout
            android:layout_width="@dimen/_0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="@dimen/_5dp"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/quantityText"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="@dimen/_15sp"
                tools:text="@string/qty_10"/>

            <Button
                android:id="@+id/saleButton"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_0dp"
                android:layout_weight="1"
                android:textSize="@dimen/_15sp"
                android:gravity="center"
                android:text="@string/sale"
                android:padding="@dimen/_5dp"
                android:textStyle="bold"
                android:focusable="false"
                android:layout_gravity="center"/>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>